Set a default value for movie options and fix text-size issues in Chrome.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
     <div class="movie-container">
         <label>Which movie would you like to see?</label>
-        <select id="movie">
-            <option value="10">Neverending Story - The End</option>
+        <select id="movie" autocomplete="off">
+            <option value="10"  selected>Neverending Story - The End</option>
             <option value="12">Bladelurcher</option>
             <option value="14">Scifi</option>
             <option value="16">James Bond - Pyrite Finger</option>
@@ -43,6 +43,7 @@
     </ul>
 
     <div id="buttons">
+        <label>Pick your viewing salon.</label>
         <button id="small">small</button>
         <button id="medium">medium</button>
         <button id="large">large</button>
